[package]
name = "object-id"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/alttch/object-id"
description = "Unique object ID with no generation"
readme = "README.md"
keywords = ["object", "id", "drop"]
autoexamples = false

[dependencies]

[dev-dependencies]
once_cell = "1.19.0"
